# AeroRule

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  walkthrough.md
.github/workflows/: ci.yml
Samples/java/: README.md  pom.xml
Samples/policy-generator-app/: Customer.java  Deal.java  SampleCreditPolicy.txt  app.py  requirements.txt
Samples/policy-generator-app/CMHCSample/: Borrower.java  Borrower.schema.json  HousingLoan.java  HousingLoan.schema.json  Property.java  Property.schema.json
Samples/python/: README.md  aml_transaction.py  loan_origination.py  requirements.txt  run_ruleset.py
Samples/rules/: AML-TX-001.json  CREDIT-001.json
Samples/rulesets/: loan-origination-v1.json
aero-cli/: Customer.schema.json  README.md  pyproject.toml
aero-cli/aero_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aero-cli/aerocli/: config.py  llm.py  main.py
aero-cli/aerocli/commands/: __init__.py  config.py  gen.py  init.py  models.py  run.py  show.py  test.py  verify.py
aero-cli/out_java/: Customer.java
aero-cli/out_python/: models.py
aero-java/: README.md  pom.xml
aero-python/: README.md  pyproject.toml
aero-python/aerorule/: __init__.py  decorators.py  engine.py  evaluator.py  models.py  provider.py
aero-python/tests/: sample_flow.json  test_database_provider.py  test_engine.py
docs/: integration_guide.md
spec/: aero_rules.sql  compliance_suite.yaml  provider-config.schema.json  rule-schema.json  ruleset-schema.json  trace-schema.json
(+21 files in other folders)
