[tool.poetry]
name = "aerorule"
version = "0.2.0"
description = "AeroRule evaluation via CEL"
authors = ["AeroRule Contributors <[EMAIL_ADDRESS]>"]

[tool.poetry.dependencies]
python = "^3.10"
cel-python = "*"
pydantic = "^2.0.0"
sqlalchemy = "^2.0.27"
pyyaml = "^6.0.1"
pytest = { version = "^8.0.0", optional = true }

[tool.poetry.extras]
dev = ["pytest"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
